# aurora

./: .gitignore  Cargo.toml  README.md  config.ini  install.sh  pac
src/: aur.rs  cli.rs  main.rs  util.rs
