[package]
name = "aurora"
version = "0.1.0"
authors = ["bimorphism <dhillonwilk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
getopts = "0.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.126", features = ["derive"] }
configparser = "2.0.1"
expanduser = "1.2.2"